8022616: u4 should not be used as a type for thread_id

Usage of u4 as a type for thread_id cause a compilation error on platform, where thread_id is a pointer

Reviewed-by: sla, sspitsyn, minqi